Fixing spacing

--- a/src/sass/example.scss
+++ b/src/sass/example.scss
@@ -9,9 +9,7 @@
 .example {
 	position: relative;
 	@include AU-clearfix();
-	@include AU-space( padding, 1unit 2unit );
-	padding: 16px 32px;
-	padding: 1rem 2rem;
+	@include AU-space( padding, 2unit );
 	margin: 0 auto;
 	max-width: 800px;
 
@@ -42,8 +40,8 @@
 
 .a11y .content .au-body.au-body--dark,
 .example .content .au-body.au-body--dark {
-	@include AU-space( margin, 1unit -2unit -2unit -2unit );
-	@include AU-space( padding, 1unit 2unit );
+	@include AU-space( margin, 1unit -2unit -2unit );
+	@include AU-space( padding, 1unit 2unit 2unit );
 }
 
 
